[gd_scene load_steps=3 format=3 uid="uid://jhjppurfqydr"]

[ext_resource type="Script" uid="uid://1xssgh2jm4ff" path="res://scripts/ui/level_node_2d.gd" id="1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 50.0

[node name="LevelNode2D" type="Node2D"]
script = ExtResource("1")

[node name="GlowSprite" type="ColorRect" parent="."]
visible = false
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
color = Color(1, 0.9, 0.3, 0.5)

[node name="ButtonSprite" type="ColorRect" parent="."]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
color = Color(0.4, 0.3, 0.2, 1)

[node name="ButtonArea" type="Area2D" parent="."]
input_pickable = true
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonArea"]
shape = SubResource("CircleShape2D_1")

[node name="Label" type="Label" parent="."]
offset_left = -60.0
offset_top = 60.0
offset_right = 60.0
offset_bottom = 86.0
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarsContainer" type="Node2D" parent="."]
position = Vector2(0, -70)

[node name="Star1" type="Sprite2D" parent="StarsContainer"]
modulate = Color(0.3, 0.3, 0.3, 1)
position = Vector2(-20, 0)
scale = Vector2(0.5, 0.5)

[node name="Star2" type="Sprite2D" parent="StarsContainer"]
modulate = Color(0.3, 0.3, 0.3, 1)
scale = Vector2(0.5, 0.5)

[node name="Star3" type="Sprite2D" parent="StarsContainer"]
modulate = Color(0.3, 0.3, 0.3, 1)
position = Vector2(20, 0)
scale = Vector2(0.5, 0.5)

[node name="LockIcon" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
